{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 654,
  "lineage": "cbfc3dda-518d-777a-7436-0fd60f4843e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0447a12f28fddb066",
            "arn": "arn:aws:ec2:ap-south-1:964645281762:instance/i-05fa97f84cb1fbcc3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fa97f84cb1fbcc3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3d9462d7431fcfe",
            "private_dns": "ip-192-168-1-234.ap-south-1.compute.internal",
            "private_ip": "192.168.1.234",
            "public_dns": "ec2-13-233-204-83.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.204.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0968e67f22c5aef33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-074857c5d551ed321"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba75bacf77e48d41",
            "tags": {
              "Name": "mywebserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-074857c5d551ed321"
            ]
          },
          "dependencies": [
            "aws_security_group.my_sec_group",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:internet-gateway/igw-0219b68171d117fb3",
            "id": "igw-0219b68171d117fb3",
            "owner_id": "964645281762",
            "tags": {
              "Name": "my_gw"
            },
            "vpc_id": "vpc-02cc3ac4ee7fce9e3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b95bd35a93241472",
            "owner_id": "964645281762",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0219b68171d117fb3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_route_table"
            },
            "vpc_id": "vpc-02cc3ac4ee7fce9e3"
          },
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063286f4e9e578d2c",
            "route_table_id": "rtb-0b95bd35a93241472",
            "subnet_id": "subnet-0ba75bacf77e48d41"
          },
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_route_table.my_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sec_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:security-group/sg-074857c5d551ed321",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074857c5d551ed321",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_Http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_sec_group",
            "name_prefix": null,
            "owner_id": "964645281762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cc3ac4ee7fce9e3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:subnet/subnet-0ba75bacf77e48d41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0ba75bacf77e48d41",
            "map_public_ip_on_launch": true,
            "owner_id": "964645281762",
            "tags": {
              "Name": "my_subnet"
            },
            "vpc_id": "vpc-02cc3ac4ee7fce9e3"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964645281762:vpc/vpc-02cc3ac4ee7fce9e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0b60d38bdba3b2c3c",
            "default_route_table_id": "rtb-0a707179cf0d2a31d",
            "default_security_group_id": "sg-0b19f0aa3db49e368",
            "dhcp_options_id": "dopt-7b699110",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02cc3ac4ee7fce9e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a707179cf0d2a31d",
            "owner_id": "964645281762",
            "tags": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}